po: update po/de_DE/common-components.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/de_DE/common-components.po
+++ b/po/de_DE/common-components.po
@@ -25,7 +25,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-21 10:47+0000\n"
+"PO-Revision-Date: 2015-12-22 12:31+0000\n"
 "Last-Translator: Fabian <schuttenberg@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
@@ -1167,7 +1167,7 @@ msgstr "Willkommen %1"
 msgid ""
 "Enter the name you want listed with this contribution. You can use a nick "
 "name like 'The Jones Family' or 'Sarah and Sam'."
-msgstr "Geben Sie den Namen ein, der zusammen mit dieser Zuwendung in der Liste aufscheinen soll. Sie können auch einen Spitznamen verwenden, wie z.B. \"Die Familie Huber\" oder \"Sarah und Sam\"."
+msgstr "Geben Sie den Namen ein, der zusammen mit dieser Zuwendung in der Liste aufscheinen soll. Sie können auch ein Akronym verwenden, wie z.B. \"Die Familie Huber\" oder \"Sarah und Sam\"."
 
 #: templates/CRM/Contribute/Form/Contribution/Main.tpl
 #: templates/CRM/Event/Form/Registration/Register.tpl
