po: update po/pt_PT/countries.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/pt_PT/countries.po
+++ b/po/pt_PT/countries.po
@@ -5,6 +5,7 @@
 # Translators:
 # Carlos Sousa <carlossoaresdesousa@gmail.com>, 2012
 # Nana, 2012
+# David Nascimento <david@davidnascimento.com>, 2015
 # split, 2013
 # Paulo Pereira <pauloizidoro@gmail.com>, 2014
 # Piotr Szotkowski <chastell@chastell.net>, 2011
@@ -13,8 +14,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-23 00:36+0000\n"
+"Last-Translator: David Nascimento <david@davidnascimento.com>\n"
 "Language-Team: Portuguese (http://www.transifex.com/civicrm/civicrm/language/pt/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1044,8 +1045,8 @@ msgstr "Kosovo"
 
 msgctxt "country"
 msgid "Saint Barthélemy"
-msgstr ""
+msgstr "São Bartolomeu"
 
 msgctxt "country"
 msgid "Saint Martin (French part)"
-msgstr ""
+msgstr "São Martinho (França)"
