po: update po/sv_SE/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/common-base.po
+++ b/po/sv_SE/common-base.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-21 09:26+0000\n"
+"PO-Revision-Date: 2015-12-28 14:54+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -2911,7 +2911,7 @@ msgstr ""
 msgid ""
 "Please enter the name of the organization or entity which owns this CiviCRM "
 "site."
-msgstr ""
+msgstr "Ange namnet på organisationen som äger denna CiviCRM-webbplats."
 
 #: CRM/Contact/Form/Domain.php
 msgid "Domain information for '%1' has been saved."
@@ -3014,7 +3014,7 @@ msgstr "- välj en stat -"
 
 #: CRM/Contact/Form/Edit/Address.php
 msgid "Override automatic geocoding"
-msgstr ""
+msgstr "Överrid automatisk geokodning"
 
 #: CRM/Contact/Form/Edit/Address.php
 msgid "Use another contact's address"
@@ -13044,11 +13044,11 @@ msgstr "Geokodning"
 msgid ""
 "Latitude and longitude may be automatically populated by enabling a Mapping "
 "Provider."
-msgstr ""
+msgstr "Latitiud och longitud kan sättas automatiskt genom att du aktiverar en Geokodnings-leverantör."
 
 #: templates/CRM/Contact/Form/Contact.hlp
 msgid "Override Geocoding"
-msgstr ""
+msgstr "Överrid geokodning"
 
 #: templates/CRM/Contact/Form/Contact.hlp
 msgid ""
@@ -13056,7 +13056,7 @@ msgid ""
 "than letting your mapping provider assign it. This is useful for addresses "
 "in locations where your mapping provider is not able to provide accurate "
 "geocoding."
-msgstr ""
+msgstr "Kryssa i denna ruta om du vill ange latitud och longitud manuellt istället för att låta din geokodnings-leverantör fylla i dessa automatiskt. Det kan vara användbart för adresser där geokodnings-leverantören inte ger rätt information."
 
 #: templates/CRM/Contact/Form/Contact.hlp
 msgid "Street number, street name, apartment/unit/suite - OR P.O. box."
@@ -13189,7 +13189,7 @@ msgid ""
 "Enter the name of the organization or entity which owns this CiviCRM domain."
 " Use the %1 token to include this value in mailing content. It is used in "
 "the default Opt-out Message."
-msgstr ""
+msgstr "Ange namnet på organisationen som äger denna CiviCRM-webbplats och domän. Använd platshållaren %1 för att inkludera detta i utskicksinnehåll. Det används också i meddelandet för att aktivt avböja utskick."
 
 #: templates/CRM/Contact/Form/Domain.hlp
 msgid "From Name"
@@ -13201,12 +13201,12 @@ msgid ""
 " this domain (e.g. subscribe and unsubscribe confirmations...). This Name "
 "and Email Address are also used as the default 'sender' values when you "
 "create a new CiviMail Mailing."
-msgstr ""
+msgstr "FRÅN-namnet och epostadressen används när automatiserade utskick sänds från denna domän (t.ex för att starta och avsluta prenumerationer...). Detta namn och epostadress används också som standardvärde för avsändare när du skapar ett CiviMail-utskick."
 
 #: templates/CRM/Contact/Form/Domain.hlp
 #: templates/CRM/Contact/Form/Task/Email.hlp
 msgid "From Address"
-msgstr ""
+msgstr "FRÅN-adress"
 
 #: templates/CRM/Contact/Form/Domain.hlp
 msgid ""
@@ -13236,7 +13236,7 @@ msgstr ""
 msgid ""
 "The name of the organization or entity which owns this CiviCRM site or "
 "domain. This is the default organization contact record."
-msgstr ""
+msgstr "Namnet på organisationen som äger denna CiviCRM-webbplats och domän. Detta är kontaktposten för standardorganisationen."
 
 #: templates/CRM/Contact/Form/Domain.tpl
 msgid ""
@@ -13259,7 +13259,7 @@ msgid ""
 "This token may also be used in regular 'Send Email to Contacts' messages and"
 " in other Message Templates. The token is replaced by the address entered "
 "below when the message is sent."
-msgstr "CiviMail-utskick måste innehålla den avsändande organisationens adress. Detta görs genom att placera %1 variabeln antingen i utskickets brödtext eller sidfot. Denna variabel får också användas i vanliga 'Send Email to Contacts' meddelanden och i andra meddelande mallar. Variabeln ersätts med adressen nedan när meddelandet skickas."
+msgstr "CiviMail-utskick måste innehålla den avsändande organisationens adress. Detta görs genom att placera %1 variabeln antingen i utskickets brödtext eller sidfot. Denna variabel får också användas i vanliga meddelanden som du skickar med 'Skicka epost till kontakter' och i andra meddelande mallar. Variabeln ersätts med adressen nedan när meddelandet skickas."
 
 #: templates/CRM/Contact/Form/Domain.tpl
 msgid "Organization Contact Information"
@@ -13269,7 +13269,7 @@ msgstr "Organisationens kontaktinformation"
 msgid ""
 "You can also include general email and/or phone contact information in "
 "mailings."
-msgstr ""
+msgstr "Du kan också inkludera epostadress och telefonnummer i utskick."
 
 #: templates/CRM/Contact/Form/Domain.tpl
 msgid "Edit Domain Information"
@@ -15158,7 +15158,7 @@ msgstr "Ange din organisations namn och primära adress."
 #: templates/CRM/Contact/Page/DashBoardDashlet.tpl
 msgid ""
 "Please enter a default FROM Email Address (for system-generated emails)."
-msgstr ""
+msgstr "Ange en epostadress som kan användas som standardavsändare (för systemgenererade epostmeddelanden)."
 
 #: templates/CRM/Contact/Page/DashBoardDashlet.tpl
 #: xml/templates/civicrm_data.tpl
@@ -18445,7 +18445,7 @@ msgstr ""
 
 #: templates/CRM/UF/Page/ProfileTemplates.tpl
 msgid "Refresh"
-msgstr ""
+msgstr "Uppdatera"
 
 #: templates/CRM/UF/Page/ProfileTemplates.tpl
 msgid ""
@@ -19244,7 +19244,7 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "CiviCRM Extensions"
-msgstr ""
+msgstr "CiviCRM-tillägg"
 
 #: xml/templates/civicrm_data.tpl
 msgid "CiviMail Approval Status"
@@ -21305,7 +21305,7 @@ msgid ""
 "Removes temporary data and files, and clears old data from cache tables. "
 "Recommend running this job every hour to help prevent database and file "
 "system bloat."
-msgstr ""
+msgstr "Tar bort temporära data och filer samt rensar inaktuella data från cache. Recommenderat intervall för detta jobb är varje timme för att undvika nedskräpning av databas och filsystem."
 
 #: xml/templates/civicrm_data.tpl
 msgid "Send Scheduled SMS"
