po: update po/sv_SE/menu.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/menu.po
+++ b/po/sv_SE/menu.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-18 12:09+0000\n"
+"PO-Revision-Date: 2015-12-28 14:07+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -2055,7 +2055,7 @@ msgstr "Detaljerad rapport för värvning, telefonuppringing, dörrknackning och
 
 msgctxt "menu"
 msgid "Case Activity Audit"
-msgstr ""
+msgstr "Ärendegranskning"
 
 msgctxt "menu"
 msgid "New Payment"
