--- a/po/sv_SE/extension.po
+++ b/po/sv_SE/extension.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-28 15:05+0000\n"
+"Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -52,7 +52,7 @@ msgid ""
 "from here</a>). If you want to install an extension which is not marked as "
 "compatible, you may be able to <a href=\"%3\">download and install "
 "extensions manually</a> (depending on access to your web server).<br />"
-msgstr ""
+msgstr "Det finns just nu inga tillägg i CiviCRM's register över tillägg som är kompatibla med version %2 (<a href=\"%1\">hämtade listan härifrån</a>). Om du vill installera ett tillägg som inte är märkt som kompatibelt, kan du prova med att <a href=\"%3\">ladda ner och installera tillägg manuellt</a> (beroende på din tillgång till din webbserver).<br />"
 
 #: CRM/Extension/Browser.php
 msgid "No Extensions Available for this Version"
