po: update po/sv_SE/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/admin.po
+++ b/po/sv_SE/admin.po
@@ -13,8 +13,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-14 22:24+0000\n"
-"Last-Translator: Anders Nilsson <anders@webmaestro.se>\n"
+"PO-Revision-Date: 2015-12-28 15:13+0000\n"
+"Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1262,19 +1262,19 @@ msgstr "Inställningar - Filkataloger för uppladdning"
 
 #: CRM/Admin/Form/Setting/Path.php
 msgid "Temporary Files"
-msgstr ""
+msgstr "Temporära filer"
 
 #: CRM/Admin/Form/Setting/Path.php
 msgid "Images"
-msgstr ""
+msgstr "Bilder"
 
 #: CRM/Admin/Form/Setting/Path.php
 msgid "Custom Files"
-msgstr ""
+msgstr "Anpassade filer"
 
 #: CRM/Admin/Form/Setting/Path.php
 msgid "Custom Templates"
-msgstr ""
+msgstr "Anpassade mallar"
 
 #: CRM/Admin/Form/Setting/Path.php
 msgid "Custom PHP Path Directory"
@@ -1463,7 +1463,7 @@ msgstr "Inställningar - Resurs-URL:er"
 
 #: CRM/Admin/Form/Setting/Url.php
 msgid "CiviCRM Resource URL"
-msgstr ""
+msgstr "Resurs-URL för CiviCRM"
 
 #: CRM/Admin/Form/Setting/Url.php
 msgid "Image Upload URL"
@@ -1471,19 +1471,19 @@ msgstr ""
 
 #: CRM/Admin/Form/Setting/Url.php
 msgid "Custom css URL"
-msgstr ""
+msgstr "URL för anpassad CSS"
 
 #: CRM/Admin/Form/Setting/Url.php
 msgid "Extension Resource URL"
-msgstr ""
+msgstr "Resurs-URL för utökningar"
 
 #: CRM/Admin/Form/Setting/Url.php
 msgid "Force Secure URLs (SSL)"
-msgstr "URL:er för Force Secure (SSL)"
+msgstr "Tvinga säkra URL:er (SSL)"
 
 #: CRM/Admin/Form/Setting/Url.php
 msgid "Verify SSL Certs"
-msgstr ""
+msgstr "Verifiera SSL-certifikat"
 
 #: CRM/Admin/Form/Setting/Url.php
 msgid ""
@@ -3665,37 +3665,37 @@ msgstr "Standardvärden för dessa filkataloger kommer att användas första gå
 msgid ""
 "File system path where temporary CiviCRM files - such as import data files -"
 " are uploaded."
-msgstr ""
+msgstr "Filsystemmapp där CiviCRM kan placera uppladdade temporära data - som importdata."
 
 #: templates/CRM/Admin/Form/Setting/Path.tpl
 msgid ""
 "File system path where image files are uploaded. Currently, this path is "
 "used for images associated with premiums (CiviContribute thank-you gifts)."
-msgstr ""
+msgstr "Filsystemmapp där uppladdade bilder lagras. Denna mapp används för bilder knutna till premier (CiviContributes tack-gåvor)."
 
 #: templates/CRM/Admin/Form/Setting/Path.tpl
 msgid ""
 "Path where documents and images which are attachments to contact records are"
 " stored (e.g. contact photos, resumes, contracts, etc.). These attachments "
 "are defined using 'file' type custom fields."
-msgstr ""
+msgstr "Mapp där dokument och bilder som är bilagor till kontaktposter lagras (t.ex foton, CV:n, kontrakt mm.). Dessa bilagor definieras med hjälp av det anpassade fältet 'filtyp'."
 
 #: templates/CRM/Admin/Form/Setting/Path.tpl
 msgid ""
 "Path where site specific templates are stored if any. This directory is "
 "searched first if set. Custom JavaScript code can be added to templates by "
 "creating files named <em>templateFile.extra.tpl</em>."
-msgstr ""
+msgstr "Mapp där anpassade mallar lagras. Denna mapp söks först om den är satt. Anpassad JavaScript-kod kan läggas till en mall genom att skapa filer som heter <em>templateFile.extra.tpl</em>."
 
 #: templates/CRM/Admin/Form/Setting/Path.tpl
 msgid "CiviCase configuration files can also be stored in this custom path."
-msgstr ""
+msgstr "Konfigurationsfiler för CiviCase kan också lagras här."
 
 #: templates/CRM/Admin/Form/Setting/Path.tpl
 msgid ""
 "Path where site specific PHP code files are stored if any. This directory is"
 " searched first if set."
-msgstr ""
+msgstr "Mapp där webbplatsspecifik PHP-kod lagras. Denna mapp söks först om den är satt."
 
 #: templates/CRM/Admin/Form/Setting/Path.tpl
 msgid "Path where CiviCRM extensions are stored."
@@ -3896,7 +3896,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Form/Setting/Url.hlp
 msgid "Force SSL"
-msgstr ""
+msgstr "Tvinga SSL"
 
 #: templates/CRM/Admin/Form/Setting/Url.hlp
 msgid ""
@@ -3928,7 +3928,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Form/Setting/Url.hlp
 msgid "Verify SSL Certificates"
-msgstr ""
+msgstr "Verifiera SSL-certifikat"
 
 #: templates/CRM/Admin/Form/Setting/Url.hlp
 msgid ""
@@ -3953,7 +3953,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Form/Setting/Url.hlp
 msgid "Resource URL"
-msgstr ""
+msgstr "Resurs-URL"
 
 #: templates/CRM/Admin/Form/Setting/Url.hlp
 msgid ""
@@ -3990,7 +3990,7 @@ msgstr "Detta måste vara samma som <a href=\"%1\">CiviCRM-mapp för tillägg</a
 
 #: templates/CRM/Admin/Form/Setting/Url.hlp
 msgid "Customizing CSS"
-msgstr ""
+msgstr "Anpassning av CSS"
 
 #: templates/CRM/Admin/Form/Setting/Url.hlp
 msgid ""
@@ -3998,7 +3998,7 @@ msgid ""
 "For small to medium sized modifications, use your css file to override some "
 "of the styles in civicrm.css. Or if you need to make drastic changes, you "
 "can choose to disable civicrm.css completely."
-msgstr ""
+msgstr "Du kan anpassa utseendet på CiviCRM genom dina egna stilfiler. För små till medelstora anpassningar kan du använda din egen CSS-fil för att överrida specifika stilar angivna i civicrm.css. Om du behöver göra radikala ändringar, kan du här avaktivera civicrm.css helt och hållet."
 
 #: templates/CRM/Admin/Form/Setting/Url.tpl
 msgid ""
@@ -4544,23 +4544,23 @@ msgstr "Det finns inga arrangemangsmallar. Du kan <a href='%1'>lägga till en</a
 
 #: templates/CRM/Admin/Page/ExtensionDetails.tpl
 msgid "Name (key)"
-msgstr ""
+msgstr "Namn (nyckel)"
 
 #: templates/CRM/Admin/Page/ExtensionDetails.tpl
 msgid "Download location"
-msgstr ""
+msgstr "Nedladdning från"
 
 #: templates/CRM/Admin/Page/ExtensionDetails.tpl
 msgid "Local path"
-msgstr ""
+msgstr "Lokal mapp"
 
 #: templates/CRM/Admin/Page/ExtensionDetails.tpl
 msgid "Author"
-msgstr ""
+msgstr "Tillverkare"
 
 #: templates/CRM/Admin/Page/ExtensionDetails.tpl
 msgid "Released on"
-msgstr ""
+msgstr "Release utgiven"
 
 #: templates/CRM/Admin/Page/ExtensionDetails.tpl
 msgid "License"
@@ -4572,7 +4572,7 @@ msgstr "Utvecklingsläge"
 
 #: templates/CRM/Admin/Page/ExtensionDetails.tpl
 msgid "Compatible with"
-msgstr ""
+msgstr "Kompatibel med"
 
 #: templates/CRM/Admin/Page/Extensions/About.tpl
 msgid ""
@@ -4582,14 +4582,14 @@ msgid ""
 "which are compatible with this version of CiviCRM. If you install Custom "
 "Searches, Reports or Payment Processor extensions - these will automatically"
 " be available on the corresponding menus and screens."
-msgstr ""
+msgstr "Genom att installera CiviCRM-tillägg kan din webbplats få extra funktioner. Den här sidan listar automatiskt tillägg från <a href=\"%2\" target=\"_blank\">CiviCRM.org's register över tillägg</a> som är kompatibla med denna version av CiviCRM och som inte är beroende av vilket CMS du använder. Om du installerar anpassade sökningar, rapporter eller tillägg av betalningsmotorer kommer de automatiskt att vara tillgängliga i motsvarande menyer och sidor."
 
 #: templates/CRM/Admin/Page/Extensions/About.tpl
 msgid ""
 "<p>You may also want to check the directory for <a href=\"%2/%1\" "
 "target=\"_blank\">native %1 modules</a> that may be useful for you (CMS-"
 "specific modules are not listed here)."
-msgstr ""
+msgstr "<p>Du kanske också är intresserad av registret över <a href=\"%2/%1\" target=\"_blank\">tillägg för %1</a> som kan vara användbara (CMS-beroende tillägg listas inte här)."
 
 #: templates/CRM/Admin/Page/Extensions/AddNew.tpl
 #: templates/CRM/Admin/Page/Extensions/Main.tpl
@@ -4600,7 +4600,7 @@ msgstr "Tilläggets namn (nyckel)"
 msgid ""
 "There are no extensions to display. Please click \"Refresh\" to update "
 "information about available extensions."
-msgstr ""
+msgstr "Det finns inga tillägg att visa. Klicka på \"Uppdatera\" för att uppdatera informationen om tillgängliga tillägg."
 
 #: templates/CRM/Admin/Page/Extensions/Main.tpl
 msgid "Outdated"
@@ -4612,7 +4612,7 @@ msgid ""
 "install extensions posted on the <a href=\"%1\">public CiviCRM Extensions "
 "Directory</a>. If you have downloaded extensions manually and don't see them"
 " here, try clicking the \"Refresh\" button."
-msgstr ""
+msgstr "Det finns inga tillägg att visa. Klicka \"Lägg till ny\" för att visa och installera tillägg som finns i <a href=\"%1\">CiviCRM's register över tillägg</a>. Om du har laddat ner tillägg manuellt och du inte ser dom här, försök med att klicka \"Uppdatera\"."
 
 #: templates/CRM/Admin/Page/Extensions.tpl
 msgid ""
@@ -4626,11 +4626,11 @@ msgstr "Tillägg"
 
 #: templates/CRM/Admin/Page/Extensions.tpl
 msgid "Add New"
-msgstr ""
+msgstr "Lägg till ny"
 
 #: templates/CRM/Admin/Page/Extensions.tpl
 msgid "Refreshing..."
-msgstr ""
+msgstr "Uppdaterar..."
 
 #: templates/CRM/Admin/Page/Extensions.tpl
 msgid "Refresh Error"
