--- a/po/fr_FR/provinces.po
+++ b/po/fr_FR/provinces.po
@@ -8,14 +8,15 @@
 # Camille Baldock <mademoisellegeek42@gmail.com>, 2013
 # Camille Baldock <mademoisellegeek42@gmail.com>, 2011
 # Mathieu Lutfy <mathieu@bidon.ca>, 2012-2013,2015
+# Paul Caranton <caranton.paul@gmail.com>, 2015
 # Philippe Bégou <philippe.begou@gmail.com>, 2012-2013
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-28 16:05+0000\n"
+"Last-Translator: Paul Caranton <caranton.paul@gmail.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -15445,23 +15446,23 @@ msgstr "Krsko"
 
 msgctxt "province"
 msgid "Laško"
-msgstr ""
+msgstr "Laško"
 
 msgctxt "province"
 msgid "Loška dolina"
-msgstr ""
+msgstr "Loška Dolina"
 
 msgctxt "province"
 msgid "Loški Potok"
-msgstr ""
+msgstr "Loški Potok"
 
 msgctxt "province"
 msgid "Luče"
-msgstr ""
+msgstr "Luče"
 
 msgctxt "province"
 msgid "Majšperk"
-msgstr ""
+msgstr "Majšperk"
 
 msgctxt "province"
 msgid "Mengeš"
