--- a/po/fr_FR/admin.po
+++ b/po/fr_FR/admin.po
@@ -12,6 +12,7 @@
 # Camille Baldock <mademoisellegeek42@gmail.com>, 2011
 # Nicolas GAILLARD <ngaillard.vosges@gmail.com>, 2015
 # Paul Caranton <caranton.paul@gmail.com>, 2015
+# Peter <webmaster@lebouclier.com>, 2015
 # Philippe Bégou <philippe.begou@gmail.com>, 2012-2013
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Vincent Lucy <vincent.lucy@gmail.com>, 2014
@@ -22,8 +23,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-21 20:39+0000\n"
-"Last-Translator: Paul Caranton <caranton.paul@gmail.com>\n"
+"PO-Revision-Date: 2015-12-29 20:43+0000\n"
+"Last-Translator: Peter <webmaster@lebouclier.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -6125,11 +6126,11 @@ msgstr ""
 
 #: templates/CRM/Admin/Form/ScheduleReminders.tpl
 msgid "Email Screen"
-msgstr ""
+msgstr "Ecran E-mail"
 
 #: templates/CRM/Admin/Form/ScheduleReminders.tpl
 msgid "SMS Screen"
-msgstr ""
+msgstr "Ecran SMS"
 
 #: templates/CRM/Admin/Form/Setting/Localization.tpl
 msgid ""
@@ -6173,7 +6174,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Page/APIExplorer.hlp
 msgid "Parameter Name"
-msgstr ""
+msgstr "Nom du paramètre"
 
 #: templates/CRM/Admin/Page/APIExplorer.hlp
 msgid "Choose a parameter from the list, or select \"other\" for manual entry."
@@ -6194,7 +6195,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Page/APIExplorer.hlp
 msgid "Parameter Value"
-msgstr ""
+msgstr "Valeur du paramètre"
 
 #: templates/CRM/Admin/Page/APIExplorer.hlp
 msgid "The following formats are accepted:"
@@ -6369,23 +6370,23 @@ msgstr ""
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Install \"%1\"?"
-msgstr ""
+msgstr "Installer \"%1\" ?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Download and Install \"%1\"?"
-msgstr ""
+msgstr "Télécharger et installer \"%1\" ?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Uninstall \"%1\"?"
-msgstr ""
+msgstr "Désinstaller \"%1\" ?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Enable \"%1\"?"
-msgstr ""
+msgstr "Activer \"%1\" ?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Disable \"%1\"?"
-msgstr ""
+msgstr "Désactiver \"%1\" ?"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Copy %1 of %2"
