--- a/po/pt_PT/admin.po
+++ b/po/pt_PT/admin.po
@@ -14,7 +14,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
+"PO-Revision-Date: 2015-12-30 09:55+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Portuguese (http://www.transifex.com/civicrm/civicrm/language/pt/)\n"
 "MIME-Version: 1.0\n"
@@ -1222,7 +1222,7 @@ msgstr ""
 #: CRM/Admin/Form/Setting/Miscellaneous.php
 #: templates/CRM/Admin/Page/ConfigTaskList.tpl
 msgid "Misc (Undelete, PDFs, Limits, Logging, Captcha, etc.)"
-msgstr ""
+msgstr "Misc (Restaurar, PDFs, Limites, Logging, Captcha, etc.)"
 
 #: CRM/Admin/Form/Setting/Miscellaneous.php
 #: templates/CRM/Admin/Form/Setting/Debugging.hlp
