--- a/po/fr_FR/contribute.po
+++ b/po/fr_FR/contribute.po
@@ -7,6 +7,7 @@
 # ERELOSInfo <erelosinfo@gmail.com>, 2014
 # Camille Baldock <mademoisellegeek42@gmail.com>, 2011
 # Moyg <moygwp+transifex@gmail.com>, 2014
+# Peter <webmaster@lebouclier.com>, 2015
 # Philippe Bégou <philippe.begou@gmail.com>, 2012-2013
 # Philippe Migrenne <migrenne@gmail.com>, 2015
 # Philippe SAMPONT <PhilippeS@cncd.be>, 2015
@@ -21,8 +22,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-11 15:09+0000\n"
-"Last-Translator: Philippe Migrenne <migrenne@gmail.com>\n"
+"PO-Revision-Date: 2015-12-31 00:28+0000\n"
+"Last-Translator: Peter <webmaster@lebouclier.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2150,7 +2151,7 @@ msgstr ""
 
 #: templates/CRM/Contribute/Form/Contribution/Confirm.tpl
 msgid "I want to contribute this amount every %1 %2s."
-msgstr ""
+msgstr "Je veux donner ce montant tous les %1 %2."
 
 #: templates/CRM/Contribute/Form/Contribution/Confirm.tpl
 msgid "I want to contribute this amount every %1."
