--- a/po/pt_PT/batch.po
+++ b/po/pt_PT/batch.po
@@ -8,10 +8,10 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-03-14 17:45-0400\n"
-"PO-Revision-Date: 2015-03-14 21:59+0000\n"
+"POT-Creation-Date: 2015-12-09 21:23-0500\n"
+"PO-Revision-Date: 2015-12-30 09:56+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
-"Language-Team: Portuguese (http://www.transifex.com/projects/p/civicrm/language/pt/)\n"
+"Language-Team: Portuguese (http://www.transifex.com/civicrm/civicrm/language/pt/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -44,7 +44,7 @@ msgstr ""
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Batch Data Entry"
-msgstr ""
+msgstr "Inserção de dados em massa"
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Expected Total"
