po: update po/pt_PT/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/pt_PT/common-base.po
+++ b/po/pt_PT/common-base.po
@@ -24,7 +24,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
+"PO-Revision-Date: 2015-12-30 09:58+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Portuguese (http://www.transifex.com/civicrm/civicrm/language/pt/)\n"
 "MIME-Version: 1.0\n"
@@ -19793,7 +19793,7 @@ msgstr ""
 msgid ""
 "Provides a list of address and telephone information for constituent records"
 " in your system."
-msgstr ""
+msgstr "Fornece uma lista de endereços e telefone para registos de constituintes no seu sistema."
 
 #: xml/templates/civicrm_data.tpl
 msgid "Constituent Report (Detail)"
@@ -19813,7 +19813,7 @@ msgstr ""
 msgid ""
 "Provides a list of constituent activity including activity statistics for "
 "one/all contacts during a given date range(required)"
-msgstr ""
+msgstr "Fornece uma lista de atividades dos constituintes, incluindo estatísticas para um/todos os contactos numa determinada janela temporal (requisito)"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Walk / Phone List Report"
