po: update po/fr_FR/drupal-civicrm.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_FR/drupal-civicrm.po
+++ b/po/fr_FR/drupal-civicrm.po
@@ -6,6 +6,7 @@
 # Claude Borgogno <claude.borgogno@axoide.com>, 2011
 # F Boot <f2boot@gmail.com>, 2012
 # Mathieu Lutfy <mathieu@bidon.ca>, 2015
+# Peter <webmaster@lebouclier.com>, 2015
 # Philippe Bégou <philippe.begou@gmail.com>, 2012
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # tonthon <tonthon21@gmail.com>, 2011
@@ -15,8 +16,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2015-10-31 09:28+0000\n"
-"Last-Translator: Xynn <xynn.anhnguyen@gmail.com>\n"
+"PO-Revision-Date: 2015-12-31 00:27+0000\n"
+"Last-Translator: Peter <webmaster@lebouclier.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1565,7 +1566,7 @@ msgstr ""
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "CiviCRM Source Contact"
-msgstr ""
+msgstr "Contact CiviCRM source"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Source Record ID"
@@ -2287,7 +2288,7 @@ msgstr "Lier ce champ à son utilisateur"
 
 #: drupal/modules/views/civicrm/civicrm_handler_filter_contact_type.inc
 msgid "Contact type"
-msgstr ""
+msgstr "Type de contact"
 
 #: drupal/modules/views/civicrm/civicrm_handler_filter_relationship_type.inc
 msgid "Relationship Type"
@@ -2403,7 +2404,7 @@ msgstr "Lien vers les participants à l'événement"
 
 #: drupal/modules/views/civicrm/civicrm_handler_filter_phone_type.inc
 msgid "Phone type"
-msgstr ""
+msgstr "Type de téléphone"
 
 #: drupal/modules/views/civicrm/civicrm_handler_field_link_activity.inc
 msgid "Link to View Activity"
@@ -2950,7 +2951,7 @@ msgstr ""
 
 #: drupal/modules/civicrm_engage/Engage/Contact/Form/Task/ReleaseVoters.php
 msgid "%1 voters has been released."
-msgstr ""
+msgstr "%1 électeurs ont été libérés."
 
 #: drupal/modules/civicrm_engage/Engage/Contact/Form/Task/ReleaseVoters.php
 msgid "%1 voters did not release."
@@ -2978,7 +2979,7 @@ msgstr ""
 
 #: drupal/modules/civicrm_engage/Engage/Contact/Form/Task/VoterReservation.php
 msgid "Voter Reservation"
-msgstr ""
+msgstr "Réservation d'électeur"
 
 #: drupal/modules/civicrm_engage/Engage/Contact/Form/Task/VoterReservation.php
 msgid "Voter Reservation has been added for %1 Contact(s)."
