po: update po/pt_PT/menu.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/pt_PT/menu.po
+++ b/po/pt_PT/menu.po
@@ -4,6 +4,7 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Nana, 2012
+# João Cunha <cunha.joao@outlook.com>, 2015
 # Joao Galvao, 2015
 # João Paulo Barreiros <jbwebspace@gmail.com>, 2013
 # jachambel <jose.chambel@gmail.com>, 2012
@@ -17,8 +18,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-30 09:59+0000\n"
+"Last-Translator: João Cunha <cunha.joao@outlook.com>\n"
 "Language-Team: Portuguese (http://www.transifex.com/civicrm/civicrm/language/pt/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -614,7 +615,7 @@ msgstr "Mapeamento e Geocodificação"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Misc (Undelete, PDFs, Limits, Logging, Captcha, etc.)"
-msgstr ""
+msgstr "Misc (Restaurar, PDFs, Limites, Logging, Captcha, etc.)"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -731,7 +732,7 @@ msgstr "Novo SMS Circular"
 
 msgctxt "menu"
 msgid "Badge Layout"
-msgstr ""
+msgstr "Layout do Badge"
 
 msgctxt "menu"
 msgid "CiviCRM"
@@ -967,11 +968,11 @@ msgstr "Terminar Sessão"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Batch Data Entry"
-msgstr ""
+msgstr "Inserção de dados em massa"
 
 msgctxt "menu"
 msgid "QUnit"
-msgstr ""
+msgstr "QUnit"
 
 msgctxt "menu"
 msgid "ProfileEditor"
@@ -1040,7 +1041,7 @@ msgstr "Modelos de Listagem de Participantes"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Event Name Badge Layouts"
-msgstr ""
+msgstr "Layouts do Badge Nome do Evento"
 
 msgctxt "menu"
 msgid "Conference Slot Labels"
@@ -1364,22 +1365,22 @@ msgstr "Prêmios (Presentes de agradecimento)"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "New Batch"
-msgstr ""
+msgstr "Novo Batch"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Open Batches"
-msgstr ""
+msgstr "Abrir Batches"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Closed Batches"
-msgstr ""
+msgstr "Batches Fechados"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Exported Batches"
-msgstr ""
+msgstr "Batches Exportados"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1669,19 +1670,19 @@ msgstr "Relatórios"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Constituent Summary"
-msgstr ""
+msgstr "Resumo do Constituinte"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid ""
 "Provides a list of address and telephone information for constituent records"
 " in your system."
-msgstr ""
+msgstr "Fornece uma lista de endereços e telefone para registos de constituintes no seu sistema."
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Constituent Detail"
-msgstr ""
+msgstr "Detalhes do Constituinte"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1695,7 +1696,7 @@ msgctxt "menu"
 msgid ""
 "Provides a list of constituent activity including activity statistics for "
 "one/all contacts during a given date range(required)"
-msgstr ""
+msgstr "Fornece uma lista de atividades dos constituintes, incluindo estatísticas para um/todos os contactos numa determinada janela temporal (requisito)"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1707,12 +1708,12 @@ msgctxt "menu"
 msgid ""
 "Provides detail list of employer employee relationships along with "
 "employment details."
-msgstr ""
+msgstr "Fornece uma lista detalhada das relações empregado - empregador juntamente com detalhes de emprego."
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Gives relationship details between two contacts"
-msgstr ""
+msgstr "Evidencia detalhes das relações entre dois contactos."
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
