po: update po/fr_FR/campaign.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_FR/campaign.po
+++ b/po/fr_FR/campaign.po
@@ -14,7 +14,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-21 20:51+0000\n"
+"PO-Revision-Date: 2015-12-31 16:51+0000\n"
 "Last-Translator: Peter <webmaster@lebouclier.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -1096,7 +1096,7 @@ msgstr "Pas de vérification e-mail"
 msgid ""
 "If you want to associate this record with a campaign, you can <a %1>create a"
 " campaign here</a>."
-msgstr ""
+msgstr "Si vous souhaitez associer cet enregistrement à une campagne, vous pouvez <a %1>créer une campagne ici</a>."
 
 #: CRM/Campaign/BAO/Petition.php
 msgid "Petition Id and/or Activity Id is not of the type Positive."
