--- a/po/fr_FR/batch.po
+++ b/po/fr_FR/batch.po
@@ -5,14 +5,15 @@
 # Translators:
 # Bronner Matthieu <mat.bronner@hotmail.fr>, 2013
 # Nicolas <nicolas@cividesk.com>, 2013
+# Peter <webmaster@lebouclier.com>, 2015
 # Philippe Bégou <philippe.begou@gmail.com>, 2012-2013
 # Xynn <xynn.anhnguyen@gmail.com>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-04-25 16:54-0400\n"
-"PO-Revision-Date: 2015-10-30 21:08+0000\n"
-"Last-Translator: Xynn <xynn.anhnguyen@gmail.com>\n"
+"POT-Creation-Date: 2015-12-09 21:23-0500\n"
+"PO-Revision-Date: 2015-12-31 17:33+0000\n"
+"Last-Translator: Peter <webmaster@lebouclier.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -62,7 +63,7 @@ msgstr "Aucun format d'export sélectionné."
 
 #: CRM/Batch/DAO/Batch.php
 msgid "Exported Date"
-msgstr ""
+msgstr "Date exportée"
 
 #: CRM/Batch/Form/Batch.php
 msgid "Number of items"
@@ -205,7 +206,7 @@ msgstr ""
 
 #: CRM/Batch/DAO/Batch.php
 msgid "Batch Total"
-msgstr ""
+msgstr "Total par lot"
 
 #: CRM/Batch/DAO/Batch.php
 msgid "Batch Number of Items"
