--- a/po/fr_FR/common-base.po
+++ b/po/fr_FR/common-base.po
@@ -24,6 +24,7 @@
 # Camille Baldock <mademoisellegeek42@gmail.com>, 2011
 # Mathieu Lutfy <mathieu@bidon.ca>, 2011-2012,2014
 # Paul Caranton <caranton.paul@gmail.com>, 2015
+# Peter <webmaster@lebouclier.com>, 2015
 # Philippe Bégou <philippe.begou@gmail.com>, 2012-2013
 # Philippe SAMPONT <PhilippeS@cncd.be>, 2015
 # Piotr Szotkowski <chastell@chastell.net>, 2011
@@ -40,8 +41,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-31 00:25+0000\n"
-"Last-Translator: Paul Caranton <caranton.paul@gmail.com>\n"
+"PO-Revision-Date: 2015-12-31 17:00+0000\n"
+"Last-Translator: Peter <webmaster@lebouclier.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -11737,7 +11738,7 @@ msgstr "Déplacer d'une ligne vers le bas"
 
 #: CRM/Utils/Weight.php
 msgid "Move to bottom"
-msgstr "Déplacer vers le bas"
+msgstr "Déplacer tout en bas"
 
 #: js/Common.js
 msgid "Are you sure you want to continue?"
