--- a/po/fr_FR/admin.po
+++ b/po/fr_FR/admin.po
@@ -23,7 +23,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-29 20:43+0000\n"
+"PO-Revision-Date: 2015-12-31 17:05+0000\n"
 "Last-Translator: Peter <webmaster@lebouclier.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -6105,7 +6105,7 @@ msgstr "La taille du dossier ne peut pas excéder la taille maximum ('upload_max
 
 #: CRM/Admin/Form/Tag.php
 msgid "You do not have sufficient permission to delete this reserved tag."
-msgstr ""
+msgstr "Vous ne disposez pas des permissions nécessaires pour supprimer cette étiquette réservée."
 
 #: CRM/Admin/Page/AJAX.php
 msgid ""
