--- a/po/fr_FR/drupal-civicrm.po
+++ b/po/fr_FR/drupal-civicrm.po
@@ -16,7 +16,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2015-12-31 00:27+0000\n"
+"PO-Revision-Date: 2015-12-31 17:33+0000\n"
 "Last-Translator: Peter <webmaster@lebouclier.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -233,7 +233,7 @@ msgstr "Le texte qui sera affiché dans le champ avec le lien."
 #: drupal/modules/views/civicrm/civicrm_handler_filter_location.inc
 #: drupal/modules/views/civicrm/civicrm_handler_filter_location_type.inc
 msgid "Location type"
-msgstr ""
+msgstr "Type d'adresse"
 
 #: drupal/modules/views/civicrm/civicrm_handler_field_link_event.inc
 #: drupal/modules/views/civicrm/civicrm_handler_field_event_link.inc
