--- a/po/fr_FR/grant.po
+++ b/po/fr_FR/grant.po
@@ -3,15 +3,16 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Peter <webmaster@lebouclier.com>, 2015
 # Philippe Bégou <philippe.begou@gmail.com>, 2012-2013
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Xynn <xynn.anhnguyen@gmail.com>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-04-25 16:54-0400\n"
-"PO-Revision-Date: 2015-10-30 21:10+0000\n"
-"Last-Translator: Xynn <xynn.anhnguyen@gmail.com>\n"
+"POT-Creation-Date: 2015-12-09 21:23-0500\n"
+"PO-Revision-Date: 2015-12-31 17:34+0000\n"
+"Last-Translator: Peter <webmaster@lebouclier.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -332,7 +333,7 @@ msgstr[1] ""
 
 #: CRM/Grant/Info.php
 msgid "access CiviGrant"
-msgstr ""
+msgstr "accéder à CiviGrant"
 
 #: CRM/Grant/Info.php
 msgid "View all grants"
