--- a/po/fr_FR/member.po
+++ b/po/fr_FR/member.po
@@ -5,6 +5,7 @@
 # Translators:
 # SR71 <ben.alard@gmail.com>, 2012
 # CARFIL <c.carfil.it@mairie-dammarie-les-lys.fr>, 2013
+# Peter <webmaster@lebouclier.com>, 2015
 # Philippe Bégou <philippe.begou@gmail.com>, 2012-2013
 # Philippe Migrenne <migrenne@gmail.com>, 2015
 # Piotr Szotkowski <chastell@chastell.net>, 2011
@@ -16,8 +17,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-31 16:56+0000\n"
+"Last-Translator: Peter <webmaster@lebouclier.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2432,7 +2433,7 @@ msgstr ""
 
 #: CRM/Member/Info.php
 msgid "View memberships"
-msgstr ""
+msgstr "Voir les adhésions"
 
 #: CRM/Member/Info.php
 msgid "edit memberships"
