po: update po/fr_FR/batch.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_FR/batch.po
+++ b/po/fr_FR/batch.po
@@ -5,14 +5,14 @@
 # Translators:
 # Bronner Matthieu <mat.bronner@hotmail.fr>, 2013
 # Nicolas <nicolas@cividesk.com>, 2013
-# Peter <webmaster@lebouclier.com>, 2015
+# Peter <webmaster@lebouclier.com>, 2015-2016
 # Philippe Bégou <philippe.begou@gmail.com>, 2012-2013
 # Xynn <xynn.anhnguyen@gmail.com>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-31 17:33+0000\n"
+"PO-Revision-Date: 2016-01-01 19:13+0000\n"
 "Last-Translator: Peter <webmaster@lebouclier.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -43,7 +43,7 @@ msgstr "Télécharger le groupe"
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Enter records"
-msgstr ""
+msgstr "Entrez les enregistrements"
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Batch Data Entry"
