--- a/po/fr_FR/common-base.po
+++ b/po/fr_FR/common-base.po
@@ -24,7 +24,7 @@
 # Camille Baldock <mademoisellegeek42@gmail.com>, 2011
 # Mathieu Lutfy <mathieu@bidon.ca>, 2011-2012,2014
 # Paul Caranton <caranton.paul@gmail.com>, 2015
-# Peter <webmaster@lebouclier.com>, 2015
+# Peter <webmaster@lebouclier.com>, 2015-2016
 # Philippe Bégou <philippe.begou@gmail.com>, 2012-2013
 # Philippe SAMPONT <PhilippeS@cncd.be>, 2015
 # Piotr Szotkowski <chastell@chastell.net>, 2011
@@ -41,7 +41,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-31 17:00+0000\n"
+"PO-Revision-Date: 2016-01-01 20:19+0000\n"
 "Last-Translator: Peter <webmaster@lebouclier.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -9289,7 +9289,7 @@ msgstr "Le nom ne doit pas commencer par un chiffre"
 
 #: CRM/Custom/Form/Group.php CRM/Price/Form/Set.php
 msgid "Set Name"
-msgstr "Nom de la tarification"
+msgstr "Titre"
 
 #: CRM/Custom/Form/Group.php
 msgid "- Any -"
