--- a/po/fr_FR/provinces.po
+++ b/po/fr_FR/provinces.po
@@ -9,14 +9,15 @@
 # Camille Baldock <mademoisellegeek42@gmail.com>, 2011
 # Mathieu Lutfy <mathieu@bidon.ca>, 2012-2013,2015
 # Paul Caranton <caranton.paul@gmail.com>, 2015
+# Peter <webmaster@lebouclier.com>, 2016
 # Philippe Bégou <philippe.begou@gmail.com>, 2012-2013
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-28 16:05+0000\n"
-"Last-Translator: Paul Caranton <caranton.paul@gmail.com>\n"
+"PO-Revision-Date: 2016-01-01 19:18+0000\n"
+"Last-Translator: Peter <webmaster@lebouclier.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -15866,7 +15867,7 @@ msgstr ""
 
 msgctxt "province"
 msgid "Tbilisi"
-msgstr ""
+msgstr "Tbilissi"
 
 msgctxt "province"
 msgid "Guria"
@@ -15878,7 +15879,7 @@ msgstr ""
 
 msgctxt "province"
 msgid "Kakheti"
-msgstr ""
+msgstr "Kakhétie"
 
 msgctxt "province"
 msgid "Kvemo Kartli"
