--- a/po/fr_FR/financial.po
+++ b/po/fr_FR/financial.po
@@ -5,14 +5,14 @@
 # Translators:
 # Nicolas <nicolas@cividesk.com>, 2013
 # Peter <webmaster@lebouclier.com>, 2015
-# Peter <webmaster@lebouclier.com>, 2015
+# Peter <webmaster@lebouclier.com>, 2015-2016
 # Philippe Bégou <philippe.begou@gmail.com>, 2013
 # Xynn <xynn.anhnguyen@gmail.com>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-31 17:32+0000\n"
+"PO-Revision-Date: 2016-01-01 19:14+0000\n"
 "Last-Translator: Peter <webmaster@lebouclier.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -126,7 +126,7 @@ msgstr "Code type de compte"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Trxn Date"
-msgstr ""
+msgstr "Date de transaction"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Trxn Result Code"
@@ -159,11 +159,11 @@ msgstr "Libellé pour le mot de passe"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Label for Signature"
-msgstr ""
+msgstr "Libellé pour la signature"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Label for Subject"
-msgstr ""
+msgstr "Libellé pour le sujet"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Default Live Site URL"
