--- a/po/fr_FR/grant.po
+++ b/po/fr_FR/grant.po
@@ -3,7 +3,7 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# Peter <webmaster@lebouclier.com>, 2015
+# Peter <webmaster@lebouclier.com>, 2015-2016
 # Philippe Bégou <philippe.begou@gmail.com>, 2012-2013
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Xynn <xynn.anhnguyen@gmail.com>, 2015
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-31 17:34+0000\n"
+"PO-Revision-Date: 2016-01-01 19:13+0000\n"
 "Last-Translator: Peter <webmaster@lebouclier.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -102,7 +102,7 @@ msgstr "Montant octroyé"
 
 #: CRM/Grant/DAO/Grant.php
 msgid "Grant Currency"
-msgstr ""
+msgstr "Devise de la subvention"
 
 #: CRM/Grant/DAO/Grant.php
 msgid "Grant Rationale"
