--- a/po/fr_FR/case.po
+++ b/po/fr_FR/case.po
@@ -7,6 +7,7 @@
 # SR71 <ben.alard@gmail.com>, 2012
 # ERELOSInfo <erelosinfo@gmail.com>, 2014
 # F Boot <f2boot@gmail.com>, 2012
+# Peter <webmaster@lebouclier.com>, 2016
 # Philippe Bégou <philippe.begou@gmail.com>, 2012-2013
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # tonthon <tonthon21@gmail.com>, 2011
@@ -17,8 +18,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-01-01 20:09+0000\n"
+"Last-Translator: Peter <webmaster@lebouclier.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1120,7 +1121,7 @@ msgstr ""
 
 #: CRM/Case/xml/configuration.sample/case_sample.mysql.tpl
 msgid "Medical evaluation"
-msgstr "Evaluation médical"
+msgstr "Évaluation médical"
 
 #: CRM/Case/xml/configuration.sample/case_sample.mysql.tpl
 msgid "Mental health evaluation"
