--- a/po/fr_FR/grant.po
+++ b/po/fr_FR/grant.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-01 19:13+0000\n"
+"PO-Revision-Date: 2016-01-02 15:49+0000\n"
 "Last-Translator: Peter <webmaster@lebouclier.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -337,7 +337,7 @@ msgstr "accéder à CiviGrant"
 
 #: CRM/Grant/Info.php
 msgid "View all grants"
-msgstr ""
+msgstr "Voir toutes les subventions"
 
 #: CRM/Grant/Info.php
 msgid "edit grants"
