po: update po/fr_FR/campaign.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_FR/campaign.po
+++ b/po/fr_FR/campaign.po
@@ -4,7 +4,7 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Camille Baldock <mademoisellegeek42@gmail.com>, 2011
-# Peter <webmaster@lebouclier.com>, 2015
+# Peter <webmaster@lebouclier.com>, 2015-2016
 # Philippe Bégou <philippe.begou@gmail.com>, 2012-2013
 # Philippe SAMPONT <PhilippeS@cncd.be>, 2015
 # tonthon <tonthon21@gmail.com>, 2011
@@ -14,7 +14,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-31 16:51+0000\n"
+"PO-Revision-Date: 2016-01-02 15:52+0000\n"
 "Last-Translator: Peter <webmaster@lebouclier.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -1110,7 +1110,7 @@ msgstr[1] ""
 
 #: CRM/Campaign/Form/Task/Release.php
 msgid "Released"
-msgstr ""
+msgstr "Libéré"
 
 #: CRM/Campaign/Form/Task/Release.php
 msgid "1 respondent did not release."
@@ -1143,7 +1143,7 @@ msgstr[1] ""
 
 #: CRM/Campaign/Info.php
 msgid "administer CiviCampaign"
-msgstr ""
+msgstr "administrer CiviCampaign"
 
 #: CRM/Campaign/Info.php
 msgid "Create new campaign, survey and petition types and their status"
