po: update po/fr_FR/financial.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_FR/financial.po
+++ b/po/fr_FR/financial.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-01 19:14+0000\n"
+"PO-Revision-Date: 2016-01-02 15:51+0000\n"
 "Last-Translator: Peter <webmaster@lebouclier.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -179,11 +179,11 @@ msgstr ""
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Default Live Button URL"
-msgstr ""
+msgstr "URL par défaut pour le bouton réel"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Default Test Site URL"
-msgstr ""
+msgstr "URL par défaut du site de test"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Default Test API URL"
@@ -223,7 +223,7 @@ msgstr "Fermer et exporter le lot"
 
 #: CRM/Financial/Form/BatchTransaction.php CRM/Financial/Form/Search.php
 msgid "Task"
-msgstr ""
+msgstr "Tâche"
 
 #: CRM/Financial/Form/BatchTransaction.php
 msgid "Remove from Batch"
@@ -948,7 +948,7 @@ msgstr ""
 
 #: CRM/Financial/DAO/PaymentToken.php
 msgid "Expiry Date"
-msgstr ""
+msgstr "Date d'expiration"
 
 #: CRM/Financial/DAO/PaymentToken.php
 msgid "Masked Account Number"
@@ -956,7 +956,7 @@ msgstr ""
 
 #: CRM/Financial/DAO/PaymentToken.php
 msgid "IP Address"
-msgstr ""
+msgstr "Adresse IP"
 
 #: CRM/Financial/Form/FinancialAccount.php
 msgid "Taxable accounts should have Financial Account Type set to Liability."
