--- a/po/fr_FR/drupal-civicrm.po
+++ b/po/fr_FR/drupal-civicrm.po
@@ -6,7 +6,7 @@
 # Claude Borgogno <claude.borgogno@axoide.com>, 2011
 # F Boot <f2boot@gmail.com>, 2012
 # Mathieu Lutfy <mathieu@bidon.ca>, 2015
-# Peter <webmaster@lebouclier.com>, 2015
+# Peter <webmaster@lebouclier.com>, 2015-2016
 # Philippe Bégou <philippe.begou@gmail.com>, 2012
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # tonthon <tonthon21@gmail.com>, 2011
@@ -16,7 +16,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2015-12-31 17:33+0000\n"
+"PO-Revision-Date: 2016-01-02 15:50+0000\n"
 "Last-Translator: Peter <webmaster@lebouclier.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -889,7 +889,7 @@ msgstr "ville de l'adresse"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "State / Province"
-msgstr ""
+msgstr "Subdivision pays"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "The State or Province of the Address"
