--- a/po/lv_LV/common-base.po
+++ b/po/lv_LV/common-base.po
@@ -3,14 +3,14 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# karlif <freibergs@jesuits.net>, 2014
+# karlif <freibergs@jesuits.net>, 2014,2016
 # Sacrosanct <krisjanis.feldmans@gmail.com>, 2014
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-01-03 13:28+0000\n"
+"Last-Translator: karlif <freibergs@jesuits.net>\n"
 "Language-Team: Latvian (http://www.transifex.com/civicrm/civicrm/language/lv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -139,7 +139,7 @@ msgstr "Visi"
 
 #: CRM/ACL/DAO/ACL.php
 msgid "ACL ID"
-msgstr ""
+msgstr "ACL ID"
 
 #: CRM/ACL/DAO/ACL.php
 msgid "ACL Name"
@@ -312,7 +312,7 @@ msgstr "Iespējots?"
 
 #: CRM/ACL/Form/ACL.php
 msgid "Please assign this permission to a Role."
-msgstr ""
+msgstr "Lūdzu piešķir šo atļauju lomai."
 
 #: CRM/ACL/Form/ACL.php
 msgid "Only 'View' and 'Edit' operations are valid for this type of data"
@@ -468,7 +468,7 @@ msgstr "(saņēmēji)"
 
 #: CRM/Activity/BAO/Activity.php
 msgid "(%1 contacts)"
-msgstr ""
+msgstr "(%1 kontakti)"
 
 #: CRM/Activity/BAO/Activity.php CRM/Activity/Import/Form/MapField.php
 #: CRM/Activity/Import/Parser.php CRM/Contact/BAO/Contact.php
@@ -488,7 +488,7 @@ msgstr "Piederība"
 
 #: CRM/Activity/BAO/Activity.php
 msgid "Source Contact ID"
-msgstr ""
+msgstr "Avota kontakta ID"
 
 #: CRM/Activity/BAO/Activity.php CRM/Activity/Import/Parser/Activity.php
 msgid "Source Contact"
@@ -570,7 +570,7 @@ msgstr "Aktivitāte piešķirta"
 
 #: CRM/Activity/BAO/Query.php
 msgid "Activity targeted to"
-msgstr ""
+msgstr "Aktivitāte plānota"
 
 #: CRM/Activity/BAO/Query.php CRM/Activity/DAO/Activity.php
 #: CRM/Activity/Form/Activity.php CRM/Activity/Selector/Activity.php
@@ -589,7 +589,7 @@ msgstr "Temats"
 
 #: CRM/Activity/BAO/Query.php
 msgid "Activity is a Test"
-msgstr ""
+msgstr "Aktivitāte ir tests"
 
 #: CRM/Activity/BAO/Query.php CRM/Activity/DAO/Activity.php
 #: CRM/Activity/Import/Form/MapField.php CRM/Activity/Selector/Activity.php
@@ -615,7 +615,7 @@ msgstr "VAI"
 
 #: CRM/Activity/BAO/Query.php
 msgid "Activity Result - %1"
-msgstr ""
+msgstr "Aktivitātes rezultāts - %1"
 
 #: CRM/Activity/BAO/Query.php CRM/Contact/Form/Search/Criteria.php
 #: CRM/Contact/Form/Task/EmailCommon.php CRM/Contact/Form/Task/SMSCommon.php
@@ -639,15 +639,15 @@ msgstr "Piešķirts"
 
 #: CRM/Activity/BAO/Query.php
 msgid "Added by"
-msgstr ""
+msgstr "Pievienojis"
 
 #: CRM/Activity/BAO/Query.php
 msgid "Activity is a Test?"
-msgstr ""
+msgstr "Vai aktivitāte ir tests?"
 
 #: CRM/Activity/BAO/Query.php
 msgid "Survey / Petition"
-msgstr ""
+msgstr "Aptauja / Petīcija"
 
 #: CRM/Activity/BAO/Query.php CRM/Contact/Form/DedupeRules.php
 #: CRM/Custom/Form/Field.php CRM/Price/BAO/PriceField.php
@@ -657,11 +657,11 @@ msgstr "- neviens -"
 #: CRM/Activity/BAO/Query.php CRM/Contact/Form/Search/Criteria.php
 #: CRM/Core/Form/Date.php
 msgid "- any -"
-msgstr ""
+msgstr "- jebkurš -"
 
 #: CRM/Activity/BAO/Query.php
 msgid "Survey Result"
-msgstr ""
+msgstr "Aptaujas rezultāts"
 
 #: CRM/Activity/BAO/Query.php CRM/Contact/BAO/Query.php
 #: CRM/Contact/Form/Task/PickProfile.php
@@ -675,7 +675,7 @@ msgstr "Aktivitātes ID"
 
 #: CRM/Activity/DAO/Activity.php
 msgid "Source Record"
-msgstr ""
+msgstr "Avota ieraksts"
 
 #: CRM/Activity/DAO/Activity.php
 msgid "Activity Type ID"
@@ -693,11 +693,11 @@ msgstr "Vieta"
 
 #: CRM/Activity/DAO/Activity.php
 msgid "Phone (called) ID"
-msgstr ""
+msgstr "Tālruņa (zvanīts) ID"
 
 #: CRM/Activity/DAO/Activity.php
 msgid "Phone (called) Number"
-msgstr ""
+msgstr "Tālruņa (zvanīts) numurs"
 
 #: CRM/Activity/DAO/Activity.php CRM/Activity/Form/Activity.php
 #: CRM/Contact/Form/Search/Custom/ActivitySearch.php
@@ -717,7 +717,7 @@ msgstr "Prioritāte"
 
 #: CRM/Activity/DAO/Activity.php
 msgid "Parent Activity Id"
-msgstr ""
+msgstr "Vecāka aktivitātes Id"
 
 #: CRM/Activity/DAO/Activity.php
 msgid "Test"
@@ -729,7 +729,7 @@ msgstr "Auto"
 
 #: CRM/Activity/DAO/Activity.php
 msgid "Relationship Id"
-msgstr ""
+msgstr "Attiecības Id"
 
 #: CRM/Activity/DAO/Activity.php
 msgid "Is this activity a current revision in versioning chain?"
@@ -737,7 +737,7 @@ msgstr "Vai šī aktivitāte ir aktuālā revīzijas versija?"
 
 #: CRM/Activity/DAO/Activity.php
 msgid "Original Activity ID "
-msgstr ""
+msgstr "Sākotnējais aktivitātes ID"
 
 #: CRM/Activity/DAO/Activity.php CRM/Activity/Form/Activity.php
 msgid "Result"
@@ -770,7 +770,7 @@ msgstr "Svars"
 
 #: CRM/Activity/DAO/ActivityContact.php
 msgid "Activity Contact ID"
-msgstr ""
+msgstr "Aktivitātes kontakta ID"
 
 #: CRM/Activity/DAO/ActivityContact.php
 msgid "Contact ID (match to contact)"
@@ -778,7 +778,7 @@ msgstr "Kontakta ID (sader ar kontaktu)"
 
 #: CRM/Activity/DAO/ActivityContact.php
 msgid "Record Type ID"
-msgstr ""
+msgstr "Ieraksta veida ID"
 
 #: CRM/Activity/Form/Activity.php CRM/Activity/Selector/Activity.php
 #: CRM/Activity/Selector/Search.php CRM/Contact/DAO/SubscriptionHistory.php
@@ -3134,7 +3134,7 @@ msgstr "Vārds un uzvārds VAI e-pasts VAI OpenID jābūt ievadīts primārajā 
 
 #: CRM/Contact/Form/Edit/Lock.php CRM/Contact/Form/Inline/Lock.php
 msgid "This record was modified by another user!"
-msgstr ""
+msgstr "Šo ierakstu izmainījis cits lietotājs!"
 
 #: CRM/Contact/Form/Edit/OpenID.php CRM/Core/DAO/OpenID.php
 #: templates/CRM/Contact/Page/Inline/OpenID.tpl
