--- a/po/fr_FR/extension.po
+++ b/po/fr_FR/extension.po
@@ -4,6 +4,7 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Bronner Matthieu <mat.bronner@hotmail.fr>, 2013
+# Peter <webmaster@lebouclier.com>, 2016
 # Philippe Bégou <philippe.begou@gmail.com>, 2013
 # Philippe SAMPONT <PhilippeS@cncd.be>, 2015
 # Xynn <xynn.anhnguyen@gmail.com>, 2015
@@ -11,8 +12,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-01-03 14:05+0000\n"
+"Last-Translator: Peter <webmaster@lebouclier.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -102,7 +103,7 @@ msgstr ""
 msgid ""
 "Your extensions directory is not set or is not writable. Click <a "
 "href='%1'>here</a> to set the extensions directory."
-msgstr ""
+msgstr "Vous n'avez pas défini le répertoire pour les extensions ou il est impossible d'y écrire. Cliquez <a href='%1'>ici</a> pour le définir."
 
 #: CRM/Extension/Downloader.php
 msgid "ZIP Support Required"
