--- a/po/lv_LV/countries.po
+++ b/po/lv_LV/countries.po
@@ -3,13 +3,13 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# karlif <freibergs@jesuits.net>, 2014
+# karlif <freibergs@jesuits.net>, 2014,2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-01-03 13:09+0000\n"
+"Last-Translator: karlif <freibergs@jesuits.net>\n"
 "Language-Team: Latvian (http://www.transifex.com/civicrm/civicrm/language/lv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1039,8 +1039,8 @@ msgstr "Kosova"
 
 msgctxt "country"
 msgid "Saint Barthélemy"
-msgstr ""
+msgstr "Senbartelmī"
 
 msgctxt "country"
 msgid "Saint Martin (French part)"
-msgstr ""
+msgstr "Senmartēna (Francijas daļa)"
