po: update po/fr_FR/financial.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_FR/financial.po
+++ b/po/fr_FR/financial.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-02 15:51+0000\n"
+"PO-Revision-Date: 2016-01-03 21:11+0000\n"
 "Last-Translator: Peter <webmaster@lebouclier.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -89,17 +89,17 @@ msgstr ""
 
 #: CRM/Financial/BAO/PaymentProcessor.php
 msgid "Invalid value passed to getPayment function"
-msgstr ""
+msgstr "La valeur passée à la fonction getPayment est invalide "
 
 #: CRM/Financial/BAO/PaymentProcessor.php
 msgid "Could not retrieve payment processor details"
-msgstr ""
+msgstr "Impossible de récupérer les paramètres de la passerelle de paiement"
 
 #: CRM/Financial/BAO/PaymentProcessorType.php
 msgid ""
 "There is a Payment Processor associated with selected Payment Processor "
 "type, hence it can not be deleted."
-msgstr ""
+msgstr "Il y a une passerelle de paiement associée avec le type de passerelle de paiement sélectionné, il ne peut donc pas être supprimé."
 
 #: CRM/Financial/BAO/PaymentProcessorType.php
 msgid "Selected Payment Processor type has been deleted.<br>"
@@ -916,7 +916,7 @@ msgstr ""
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Record:"
-msgstr ""
+msgstr "Enregistrement :"
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Created By:"
@@ -932,7 +932,7 @@ msgstr "Dernièrement modifié par :"
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Payment Instrument:"
-msgstr ""
+msgstr "Moyen de paiement :"
 
 #: CRM/Financial/BAO/PaymentProcessorType.php
 msgid "Selected Payment Processor type has been deleted.<br/>"
