po: update po/de_DE/common-components.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/de_DE/common-components.po
+++ b/po/de_DE/common-components.po
@@ -9,7 +9,7 @@
 # Danny Liebig <danny.liebig@hotmail.de>, 2012
 # Detlev Sieber <detlev.sieber@foebud.org>, 2011-2012,2014
 # Ettore Atalan <atalanttore@googlemail.com>, 2015
-# Fabian <schuttenberg@systopia.de>, 2013-2015
+# Fabian <schuttenberg@systopia.de>, 2013-2016
 # Hartmut Holzgraefe <hartmut@php.net>, 2011
 # Jens-Erik Weber <JensErikWeber@gmail.com>, 2015
 # Jo <jo@caj-augsburg.de>, 2012
@@ -25,7 +25,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-22 12:31+0000\n"
+"PO-Revision-Date: 2016-01-06 17:05+0000\n"
 "Last-Translator: Fabian <schuttenberg@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
@@ -2162,7 +2162,7 @@ msgstr "Zahlung speichern"
 
 #: CRM/Admin/Form/Navigation.php templates/CRM/Event/Page/DashBoard.tpl
 msgid "Parent"
-msgstr "Übergeordnet"
+msgstr "Primär"
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 #: templates/CRM/Pledge/Page/Payment.tpl
