po: update po/de_DE/member.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/de_DE/member.po
+++ b/po/de_DE/member.po
@@ -8,7 +8,7 @@
 # Birdiebln <birdiebln@gmail.com>, 2014
 # Detlev Sieber <detlev.sieber@foebud.org>, 2011-2012,2014
 # Ettore Atalan <atalanttore@googlemail.com>, 2014
-# Fabian <schuttenberg@systopia.de>, 2013-2015
+# Fabian <schuttenberg@systopia.de>, 2013-2016
 # Hartmut Holzgraefe <hartmut@php.net>, 2011
 # MichaSeidler <info@euroconsults.eu>, 2012
 # Jo <jo@caj-augsburg.de>, 2011-2012
@@ -22,7 +22,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-21 12:14+0000\n"
+"PO-Revision-Date: 2016-01-06 09:32+0000\n"
 "Last-Translator: Fabian <schuttenberg@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
@@ -1590,7 +1590,7 @@ msgid ""
 "Configure membership renewal reminders using <a href=\"%1\">Schedule "
 "Reminders</a>. If you have previously configured renewal reminder templates,"
 " you can re-use them with your new scheduled reminders."
-msgstr ""
+msgstr "Um automatische Erinnerungen zu konfigurieren, nutzen Sie die <a href=\"%1\">geplanten Erinnerungen</a>. Wenn Sie die alte Version für automatische Erinnerungen genutzt haben, können Sie die Vorlagen weiter verwenden."
 
 #: templates/CRM/Member/Form/MembershipView.tpl
 msgid "View contact summary"
@@ -2007,7 +2007,7 @@ msgstr "Mitgliedstypen werden für die Kategorisierung der Mitgliedschaften verw
 msgid ""
 "Configure membership renewal reminders using <a href=\"%1\">Schedule "
 "Reminders</a>."
-msgstr ""
+msgstr "Um automatische Erinnerungen zu konfigurieren, nutzen Sie die <a href=\"%1\">geplanten Erinnerungen</a>."
 
 #: templates/CRM/Member/Page/MembershipType.tpl
 #: templates/CRM/Member/Page/Tab.tpl
