po: update po/de_DE/event.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/de_DE/event.po
+++ b/po/de_DE/event.po
@@ -10,7 +10,7 @@
 # Danny Liebig <danny.liebig@hotmail.de>, 2012
 # Detlev Sieber <detlev.sieber@foebud.org>, 2011,2013
 # Bernhard Heß <dr.bernhard.hess@t-online.de>, 2012
-# Fabian <schuttenberg@systopia.de>, 2013-2015
+# Fabian <schuttenberg@systopia.de>, 2013-2016
 # gnpma100 <gnpma100@gmail.com>, 2014
 # Hartmut Holzgraefe <hartmut@php.net>, 2011
 # Jens-Erik Weber <JensErikWeber@gmail.com>, 2012
@@ -30,7 +30,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-21 10:57+0000\n"
+"PO-Revision-Date: 2016-01-06 17:05+0000\n"
 "Last-Translator: Fabian <schuttenberg@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
@@ -3956,7 +3956,7 @@ msgstr "Wiederholte Veranstalatung"
 
 #: templates/CRM/Event/Page/DashBoard.tpl
 msgid "Child"
-msgstr "Kind"
+msgstr "sekundär"
 
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 #: xml/templates/message_templates/event_online_receipt_text.tpl
