--- a/po/es_ES/campaign.po
+++ b/po/es_ES/campaign.po
@@ -3,6 +3,7 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Alexandre Hurlé <j.alexandre@entreculturas.org>, 2016
 # Estefanía Mediavilla <e.mediavilla@ixiam.com>, 2014
 # fmcooke <fmcooke@yahoo.com>, 2012
 # fmcooke <fmcooke@yahoo.com>, 2012
@@ -21,8 +22,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-01-07 07:32+0000\n"
+"Last-Translator: Alexandre Hurlé <j.alexandre@entreculturas.org>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -406,7 +407,7 @@ msgstr "Información principal"
 
 #: CRM/Campaign/Form/Survey/TabHeader.php
 msgid "Results"
-msgstr ""
+msgstr "Resultados"
 
 #: CRM/Campaign/Form/Survey.php
 msgid "Configure Survey - %1"
