--- a/po/de_DE/provinces.po
+++ b/po/de_DE/provinces.po
@@ -5,6 +5,7 @@
 # Translators:
 # Birdiebln <birdiebln@gmail.com>, 2014
 # Bernhard Heß <dr.bernhard.hess@t-online.de>, 2012
+# Fabian <schuttenberg@systopia.de>, 2016
 # MichaSeidler <info@euroconsults.eu>, 2011
 # Martin Peth <peth@systopia.de>, 2015
 # Piotr Szotkowski <chastell@chastell.net>, 2011
@@ -15,8 +16,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-01-07 09:28+0000\n"
+"Last-Translator: Fabian <schuttenberg@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2694,7 +2695,7 @@ msgstr "Obwalden"
 
 msgctxt "province"
 msgid "Sankt Gallen"
-msgstr "St. Gallen"
+msgstr "Sankt Gallen"
 
 msgctxt "province"
 msgid "Schaffhausen"
