--- a/po/es_ES/admin.po
+++ b/po/es_ES/admin.po
@@ -3,6 +3,7 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Alexandre Hurlé <j.alexandre@entreculturas.org>, 2016
 # Alvaro Illanes <aillanes@tvsantelmo.com.ar>, 2013
 # Carlos Capote <carloscapote@masticable.org>, 2014
 # Cristian Schalper <crschalper@gmail.com>, 2015
@@ -29,8 +30,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-01-07 07:31+0000\n"
+"Last-Translator: Alexandre Hurlé <j.alexandre@entreculturas.org>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1989,7 +1990,7 @@ msgstr "Usted no tiene permiso para revertir esta plantilla."
 
 #: CRM/Admin/Page/MessageTemplates.php
 msgid "Message Template"
-msgstr ""
+msgstr "Plantilla de mensaje"
 
 #: CRM/Admin/Page/OptionGroup.php templates/CRM/Admin/Page/OptionGroup.tpl
 msgid "View and Edit Options"
@@ -4874,7 +4875,7 @@ msgstr "Las plantillas de mensaje de flujo de trabajo de sistema se usan para ge
 
 #: templates/CRM/Admin/Page/MessageTemplates.tpl
 msgid "Workflow"
-msgstr ""
+msgstr "Flujo de trabajo"
 
 #: templates/CRM/Admin/Page/MessageTemplates.tpl
 msgid "Add Message Template"
@@ -5017,7 +5018,7 @@ msgstr "No hay valores de opciones de elección para esta opción de grupo. Uste
 
 #: templates/CRM/Admin/Page/Options.hlp
 msgid "Activity Types"
-msgstr ""
+msgstr "tipos de actividad"
 
 #: templates/CRM/Admin/Page/Options.hlp
 msgid ""
@@ -6376,23 +6377,23 @@ msgstr "Nota: la etiqueta seleccionada es utilizada por entidades adicionales ."
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Install \"%1\"?"
-msgstr ""
+msgstr "¿Instalar \"%1\"?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Download and Install \"%1\"?"
-msgstr ""
+msgstr "¿Descargar e instalar \"%1\"?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Uninstall \"%1\"?"
-msgstr ""
+msgstr "¿Desinstalar \"%1\"?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Enable \"%1\"?"
-msgstr ""
+msgstr "¿Habilitar \"%1\"?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Disable \"%1\"?"
-msgstr ""
+msgstr "¿Deshabilitar \"%1\"?"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Copy %1 of %2"
@@ -6626,7 +6627,7 @@ msgstr "Alerte a los administradores de la página de todas las descargas nuevas
 msgid ""
 "You can specify the reCAPTCHA theme options as comma separated data.(eg: "
 "theme:'blackglass', lang : 'fr' )."
-msgstr ""
+msgstr "Puede especificar las opciones de reCAPTCHA en función del tema  usando datos separados por comas (v.g.: tema:'blackglass',lang:'es'). "
 
 #: templates/CRM/Admin/Form/Setting/Miscellaneous.tpl
 msgid ""
@@ -6719,7 +6720,7 @@ msgstr "Seleccione campo"
 
 #: templates/CRM/Admin/Page/APIExplorer.js
 msgid "Auto-Select Current User"
-msgstr ""
+msgstr "Selección automática del usuario actual"
 
 #: templates/CRM/Admin/Page/APIExplorer.tpl
 msgid "Explorer"
@@ -6762,7 +6763,7 @@ msgid ""
 "and build the community. If you have a technical role for this site, be sure"
 " to check \"Keep in Touch\" to receive technical updates (a low volume "
 "mailing list)."
-msgstr ""
+msgstr "'}¿Ha registrado este sitio en CiviCRM.org? Si no es así, le rogamos que nos ayude a fortalecer el sistema CiviCRM dedicando unos minutos a <a href=\"%1\" target=\"_blank\">cumplimentar el formulario de registro del sitio</a>. La información recopilada nos ayudará a priorizar las mejoras, priorizar nuestra comunicación y construir la comunidad. Si desempeña tareas técnicas en su sitio web, no olvide marcar la opción \"Keep in Touch\" para recibir actualizaciones sobre cuestiones técnicas (una lista de distribución de escaso volumen)."
 
 #: templates/CRM/Admin/Page/ConfigTaskList.tpl
 msgid "Enable components"
