--- a/po/lv_LV/contribute.po
+++ b/po/lv_LV/contribute.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
+"PO-Revision-Date: 2016-01-07 16:41+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Latvian (http://www.transifex.com/civicrm/civicrm/language/lv/)\n"
 "MIME-Version: 1.0\n"
@@ -3607,7 +3607,7 @@ msgstr ""
 #: templates/CRM/Contribute/Form/Search/ContributionRecur.tpl
 #: templates/CRM/Contribute/Page/Tab.tpl
 msgid "Recurring Contributions"
-msgstr ""
+msgstr "Periodiskas iemaksas"
 
 #: templates/CRM/Contribute/Form/Search/ContributionRecur.tpl
 msgid "Next Scheduled"
