--- a/po/lv_LV/drupal-civicrm.po
+++ b/po/lv_LV/drupal-civicrm.po
@@ -8,9 +8,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2015-03-13 21:28+0000\n"
+"PO-Revision-Date: 2016-01-07 16:38+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
-"Language-Team: Latvian (http://www.transifex.com/projects/p/civicrm/language/lv/)\n"
+"Language-Team: Latvian (http://www.transifex.com/civicrm/civicrm/language/lv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -1866,7 +1866,7 @@ msgstr ""
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Group ID"
-msgstr ""
+msgstr "Grupas ID"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "The numeric ID of the Group"
@@ -1878,7 +1878,7 @@ msgstr ""
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Group Title"
-msgstr ""
+msgstr "Grupas nosaukums"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Description of the Group"
