po: update po/lv_LV/member.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/lv_LV/member.po
+++ b/po/lv_LV/member.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
+"PO-Revision-Date: 2016-01-07 14:30+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Latvian (http://www.transifex.com/civicrm/civicrm/language/lv/)\n"
 "MIME-Version: 1.0\n"
@@ -806,7 +806,7 @@ msgstr "Biedra vārds vai e-pasts"
 
 #: CRM/Member/Form/Search.php
 msgid "Find Memberships"
-msgstr ""
+msgstr "Atrast piederības"
 
 #: CRM/Member/Form/Task/Batch.php
 msgid "Batch Update for Members"
@@ -1058,7 +1058,7 @@ msgstr ""
 
 #: templates/CRM/Member/Form/Membership.tpl
 msgid "New Membership"
-msgstr ""
+msgstr "Jauns biedrs"
 
 #: templates/CRM/Member/Form/Membership.tpl
 msgid ""
@@ -1841,7 +1841,7 @@ msgstr ""
 
 #: templates/CRM/Member/Page/DashBoard.tpl
 msgid "Membership Summary"
-msgstr ""
+msgstr "Biedru kopsavilkums"
 
 #: templates/CRM/Member/Page/DashBoard.tpl
 msgid "Members by Type"
